--- a/frontend-react-js/src/index.css
+++ b/frontend-react-js/src/index.css
@@ -1,8 +1,21 @@
+:root {
+  --bg: rgb(47,28,70);
+  --fg: rgb(8,1,14);
+
+  --field-border: rgb(149,0,255,0.5);
+  --field-bg: rgb(149,0,255,0.3);
+  --field-border-focus: rgb(149,0,255,1);
+  --activity-border: rgb(57,68,94);
+  --sidebar-footer: rgb(255,255,255,0.5);
+
+  
+}
+
 * { box-sizing: border-box; }
 html,body { 
   height: 100%; 
   width: 100%; 
-  background: rgb(14,3,28);
+  background: var(--bg);
 }
 
 body {
